--- a/Template/explore-html/team.html
+++ b/Template/explore-html/team.html
@@ -178,6 +178,30 @@
                 </div><!-- end .span12 -->
             </div><!-- end .row -->
         </div>  <!-- end .row-content -->
+
+        <div class="row-container groups-btn-group-row-container">
+                <div id="groups-btn-group">
+                    <a href="#exec" class="btn alt">Exec</a>
+                    <a href="#advisory" class="btn alt">Advisory</a>
+                    <a href="#boxco" class="btn alt">BoxCo.</a>
+                    <a href="#designworks" class="btn alt">DesignWorks</a>
+                    <a href="#finance" class="btn alt">Finance</a>
+                    <a href="#marketing" class="btn alt">Marketing</a>
+                    <a href="#nututors" class="btn alt">NU Tutors</a>
+                    <a href="#pops" class="btn alt">POps</a>
+                    <a href="#restructuring" class="btn alt">Restructuring</a>
+                    <a href="#rezessentials" class="btn alt">RezEssentials</a>
+                    <a href="#tech" class="btn alt">Tech</a>
+                </div>
+        </div>
+
+        <div class="row-container team-group-name-container" id="exec">
+            <div class="row">
+                <div class="team-group-name">
+                    <h2>Executive Team</h2>
+                </div>
+            </div>
+        </div>
         
         <div class="row-container team-row-container">
             <div class="row team-row">
@@ -190,19 +214,14 @@
                             <img src="_content/team/priya-kumar.jpg" class="team-member-pic">
 
                             <div class="team-member-description">
-                            
-                                <div class="team-member-description team-member-label">
                                 
-                                    <div class="team-member-description-inner">
-                                    
-                                        <h3>Priya Kumar</h3>
-                                                
-                                        <p>CEO</p>
-                                    
-                                    </div><!-- .team-member-description-inner -->
-                                    
-                                    
-                                </div><!-- end .team-member-description .team-member-label-->
+                                <div class="team-member-description-inner">
+                                
+                                    <h3>Priya Kumar</h3>
+                                            
+                                    <p>CEO</p>
+                                
+                                </div><!-- .team-member-description-inner -->
 
                             </div><!-- end .team-member-description -->
                             
@@ -360,7 +379,191 @@
                 </div><!-- end .span12 -->
             </div><!-- end .row -->
         </div><!-- end .row-container -->
-            
+
+        <div class="row-container team-group-name-container" id="advisory">
+            <div class="team-group-name">
+                <h2>Advisory</h2>
+            </div>
+        </div>
+
+        <div class="row-container team-row-container">
+            <div class="row team-row">
+                <div class="span12 team-span">
+                    
+                    <div class="team-member-wrapper fixed">
+                    
+                        <div class="team-member">
+                            
+                            <img src="_content/team/priya-kumar.jpg" class="team-member-pic">
+
+                            <div class="team-member-description">
+                                
+                                <div class="team-member-description-inner">
+                                
+                                    <h3>Priya Kumar</h3>
+                                            
+                                    <p>CEO</p>
+                                
+                                </div><!-- .team-member-description-inner -->
+
+                            </div><!-- end .team-member-description -->
+                            
+                        </div><!-- end .team-member -->
+                        
+                        <div class="team-member">                                               
+                            <img src="_content/team/bomani-mcclendon.jpg" class="team-member-pic">
+                            
+                            <div class="team-member-description">
+                               
+                               <div class="team-member-description-inner">
+                               
+                                   <h3>Bomani McClendon</h3>
+                                            
+                                    <p>VP of Technology</p>
+                                
+                                </div><!-- end .team-member-description-inner -->
+                                
+                                
+                            </div><!-- end .team-member-description -->
+                            
+                        </div><!-- end .team-member -->
+                        
+                        <div class="team-member">
+                            
+                            <img src="_content/team/david-olodort.jpg" class="team-member-pic">
+                            
+                            <div class="team-member-description">
+                            
+                                <div class="team-member-description-inner">
+                               
+                                   <h3>David Olodort</h3>
+                                            
+                                    <p>VP of Portfolio Growth</p>
+                                
+                                </div><!-- end .team-member-description-inner -->
+                                
+                                
+                            </div><!-- end .team-member-description -->
+                            
+                        </div><!-- end .team-member -->
+                        
+                        <div class="team-member">              
+                            
+                            <img src="_content/team/katie-ostazeski.jpg" class="team-member-pic">    
+
+                            <div class="team-member-description">
+                            
+                                <div class="team-member-description-inner">
+                               
+                                   <h3>Katie Ostazeski</h3>
+                                            
+                                    <p>VP of People Operations</p>
+                                
+                                </div><!-- end .team-member-description-inner -->
+                                
+                                
+                            </div><!-- end .team-member-description -->
+                            
+                        </div><!-- end .team-member -->
+                        
+                    </div><!-- end .team-member-wrapper -->                                        
+                    
+                </div><!-- end .span12 -->
+            </div><!-- end .row -->
+        </div><!-- end .row-container -->
+
+        <div class="row-container team-group-name-container" id="boxco">
+            <div class="team-group-name">
+                <h2>BoxCo.</h2>
+            </div>
+        </div>
+
+        <div class="row-container team-row-container">
+            <div class="row team-row">
+                <div class="span12 team-span">
+                    
+                    <div class="team-member-wrapper fixed">
+                    
+                        <div class="team-member">
+                            
+                            <img src="_content/team/priya-kumar.jpg" class="team-member-pic">
+
+                            <div class="team-member-description">
+                                
+                                <div class="team-member-description-inner">
+                                
+                                    <h3>Priya Kumar</h3>
+                                            
+                                    <p>CEO</p>
+                                
+                                </div><!-- .team-member-description-inner -->
+
+                            </div><!-- end .team-member-description -->
+                            
+                        </div><!-- end .team-member -->
+                        
+                        <div class="team-member">                                               
+                            <img src="_content/team/bomani-mcclendon.jpg" class="team-member-pic">
+                            
+                            <div class="team-member-description">
+                               
+                               <div class="team-member-description-inner">
+                               
+                                   <h3>Bomani McClendon</h3>
+                                            
+                                    <p>VP of Technology</p>
+                                
+                                </div><!-- end .team-member-description-inner -->
+                                
+                                
+                            </div><!-- end .team-member-description -->
+                            
+                        </div><!-- end .team-member -->
+                        
+                        <div class="team-member">
+                            
+                            <img src="_content/team/david-olodort.jpg" class="team-member-pic">
+                            
+                            <div class="team-member-description">
+                            
+                                <div class="team-member-description-inner">
+                               
+                                   <h3>David Olodort</h3>
+                                            
+                                    <p>VP of Portfolio Growth</p>
+                                
+                                </div><!-- end .team-member-description-inner -->
+                                
+                                
+                            </div><!-- end .team-member-description -->
+                            
+                        </div><!-- end .team-member -->
+                        
+                        <div class="team-member">              
+                            
+                            <img src="_content/team/katie-ostazeski.jpg" class="team-member-pic">    
+
+                            <div class="team-member-description">
+                            
+                                <div class="team-member-description-inner">
+                               
+                                   <h3>Katie Ostazeski</h3>
+                                            
+                                    <p>VP of People Operations</p>
+                                
+                                </div><!-- end .team-member-description-inner -->
+                                
+                                
+                            </div><!-- end .team-member-description -->
+                            
+                        </div><!-- end .team-member -->
+                        
+                    </div><!-- end .team-member-wrapper -->                                        
+                    
+                </div><!-- end .span12 -->
+            </div><!-- end .row -->
+        </div><!-- end .row-container -->
+
         <!-- //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
 
         </div><!-- end #content -->     
@@ -415,7 +618,7 @@
 
                     </div><!-- end .span6 -->       
                 </div><!-- end .row -->
-            </div><!-- end .container -->       
+            </div><!-- end .container --> 
         
         <!-- //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
 
@@ -491,7 +694,13 @@
     <!-- /// Custom JS ////////  -->
     <script src="_layout/js/plugins.js"></script>   
     <script src="_layout/js/scripts.js"></script>
-    <!-- // <script src="_layout/js/team.js"></script> -->
+    <script type="text/javascript" src="_layout/js/jquery.scrollTo.min.js"></script>
+    <script type="text/javascript" src="_layout/js/jquery.localScroll.min.js"></script>
+    <script type="text/javascript">
+        $(function(){
+            $('#groups-btn-group').localScroll({duration:400, offset: -100});
+        });
+    </script>
 
 </body>
 </html>
