mission statement and graph changes
centered mission headings, changed graph color

--- a/Template/explore-html/about-us.html
+++ b/Template/explore-html/about-us.html
@@ -182,7 +182,7 @@
                 <div class="row">
                     <div class="span4">
                         
-                        <h3 class="text-uppercase"><strong>Building Businesses</strong></h3>
+                        <h3 class="text-uppercase" style ="text-align:center"><strong>Building Businesses</strong></h3>
                         <img src="http://souk-dc.com/wp-content/uploads/2013/12/Business1.jpg" alt="">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lobortis ex sapien, ut euismod mauris 
                         egestas in. Aliquam et massa nibh. Ut sed felis nunc. Aliquam eleme ntum nunc vel mi lacinia, ut elementum dolor 
@@ -199,7 +199,7 @@
 
                     <div class="span4">
                         
-                        <h3 class="text-uppercase"><strong>Developing People</strong></h3>
+                        <h3 class="text-uppercase" style ="text-align:center"><strong>Developing People</strong></h3>
                         <img src="http://rbtrainings.com/wp-content/uploads/2015/02/learning.jpg" alt="">   
                         <p>
                             <strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lobortis ex sapien, ut euismod 
@@ -217,7 +217,7 @@
                     </div><!-- end .span4 -->
                     <div class="span4">
                         
-                        <h3 class="text-uppercase"><strong>Giving Back</strong></h3>
+                        <h3 class="text-uppercase" style ="text-align:center"><strong>Giving Back</strong></h3>
                         <img src="http://www.dw.de/image/0,,18228473_303,00.jpg" alt="">    
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lobortis ex sapien, ut euismod mauris 
                         egestas in. Aliquam et massa nibh. Ut sed felis nunc. Aliquam elementum nunc vel mi lacinia, ut elementum dolor 
@@ -777,7 +777,7 @@
                         
                         <br><br>
 
-                    <canvas id="revenueChart"></canvas>
+                    <canvas id="revenueChart" height = "200px"></canvas>
 
                         
 
@@ -984,9 +984,9 @@
             },
             {
                 label: "My Second dataset",
-                fillColor: "rgba(151,187,205,0.2)",
-                strokeColor: "rgba(151,187,205,1)",
-                pointColor: "rgba(151,187,205,1)",
+                fillColor: "rgba(206,65,21,0.2)",
+                strokeColor: "#CE4115",
+                pointColor: "#CE4115",
                 pointStrokeColor: "#fff",
                 pointHighlightFill: "#fff",
                 pointHighlightStroke: "rgba(151,187,205,1)",
