Design Review 1 changes
changes to custom-css:
Changed bullet color for carousel
changed height of carousel

changes to about- us:
icon for our story
changed size of chart, need to make it responsive still
changed quotes

--- a/Template/explore-html/about-us.html
+++ b/Template/explore-html/about-us.html
@@ -240,19 +240,14 @@
             <div class="row-container">    
                 <div class="row">
                     <div class="span12">
-                        
                         <div class="headline">
-                            
                             <h1>Our Culture</h1>
                             <h4>Hear what our members have to say about us</h4>
-                            
                         </div><!-- end .headline -->
-                        
                     </div><!-- end .span12 -->
                 </div><!-- end .row -->
             </div>  <!-- end .row-content --> 
 
-            <div class = "row-container">
                 <div class="fullwidthbanner-container">
                     <div class="fullwidthbanner">
                     
@@ -262,25 +257,31 @@
                                 <img src="http://webneel.com/daily/sites/default/files/images/daily/07-2013/3-birds-black-and-white-photography-by-cohen.jpg"  alt="">                            
 
                                  <div class="caption title sft"
-                                     data-x="250"
-                                     data-y="210"
+                                     data-x="390"
+                                     data-y="100"
                                      data-speed="1000"
-                                     data-start="2000"
+                                     data-start="1000"
                                      data-easing="easeOutExpo">
                                      
-                                     <blockquote style= "text-align: center; line-height: 120%;">
+                                     <blockquote style= "text-align: center; line-height: 120%; font-size:80%">
                                      <em>
-                                     NSH means inspiration. <br>
-                                     The immense privilege of NSH is the opportunity to be <br>
-                                     surrounded by so many driven, talented, and intelligent<br>
-                                     people. I've been able to find a lot of role models in the NSH <br>
-                                     community. Pushing myself to gain the positive traits that <br>
-                                     I admire in those people has been important for my <br>
-                                     development as a person.</em>
+                                    NSH means empowerment. <br>
+                                    It means this ridiculously amazing feeling of being <br>
+                                    20 years old and having the power to transform this <br>
+                                    community through business and social impact. <br>
+                                    But the empowerment just begins at community<br>
+                                    --it ends with you. <br><br>
+                                    NSH means being in a room with 40 of the most <br>
+                                    passionate, driven, dynamic people you've ever met, <br>
+                                    and having them challenge you to be a better leader and <br>
+                                    a better person. It means being empowered with a <br>
+                                    business toolkit, a community, and a level of confidence, <br>
+                                    that can take you anywhere you want to go."<br>
+                                 </em>
 
-                                     <br> <br>
+                                     <br> 
 
-                                     <em> Bomani McClendon, VP of Technology</em>
+                                     <em> Priya Kumar </em>
                                      </blockquote>
                                                                      
                                 </div>
@@ -296,24 +297,22 @@
 
                                <div class="caption title sft"
                                      data-x="250"
-                                     data-y="210"
+                                     data-y="250"
                                      data-speed="1000"
-                                     data-start="2000"
+                                     data-start="1000"
                                      data-easing="easeOutExpo">
                                      
                                      <blockquote style= "text-align: center; line-height: 120%;">
                                      <em>
-                                     NSH means inspiration. <br>
-                                     The immense privilege of NSH is the opportunity to be <br>
-                                     surrounded by so many driven, talented, and intelligent<br>
-                                     people. I've been able to find a lot of role models in the NSH <br>
-                                     community. Pushing myself to gain the positive traits that <br>
-                                     I admire in those people has been important for my <br>
-                                     development as a person.</em>
+                                        NSH is the most influential experience I've had at NU,  <br>
+                                        more influential than all my classes combined.  <br>
+                                        NSH teaches you the importance of taking initiative,  <br>
+                                        and how to get people excited about the ideas that you have. <br>
+                                    </em>
 
                                      <br> <br>
 
-                                     <em> Bomani McClendon, VP of Technology</em>
+                                     <em> Oskar Melking </em>
                                      </blockquote>
                                                                      
                                 </div>            
@@ -325,24 +324,52 @@
 
                                <div class="caption title sft"
                                      data-x="250"
-                                     data-y="210"
+                                     data-y="250"
                                      data-speed="1000"
-                                     data-start="2000"
+                                     data-start="1000"
                                      data-easing="easeOutExpo">
                                      
                                      <blockquote style= "text-align: center; line-height: 120%;">
                                      <em>
-                                     NSH means inspiration. <br>
-                                     The immense privilege of NSH is the opportunity to be <br>
-                                     surrounded by so many driven, talented, and intelligent<br>
-                                     people. I've been able to find a lot of role models in the NSH <br>
-                                     community. Pushing myself to gain the positive traits that <br>
-                                     I admire in those people has been important for my <br>
-                                     development as a person.</em>
+                                        NSH has the highest concentration of high achieving, <br>
+                                        driven, inspiring, hilarious, and all round A-grade <br>
+                                        human beings I have ever had the pleasure of knowing. <br>
+                                        The nature of what we do attracts the best and the brightest <br>
+                                        from all corners of this campus.<br>
+                                    </em>
 
                                      <br> <br>
 
-                                     <em> Bomani McClendon, VP of Technology</em>
+                                     <em> Danielle Lay</em>
+                                     </blockquote>
+                                                                     
+                                </div>     
+                                
+                            </li>
+
+                            <li data-transition="fade">
+
+                                <img src="http://fc01.deviantart.net/fs70/i/2012/227/f/e/the_sweet_sound_of_rain___variation____grayscale_by_elementinfinity-d57j7vh.jpg"  alt="">
+
+                               <div class="caption title sft"
+                                     data-x="320"
+                                     data-y="250"
+                                     data-speed="1000"
+                                     data-start="1000"
+                                     data-easing="easeOutExpo">
+                                     
+                                     <blockquote style= "text-align: center; line-height: 120%;">
+                                        <em>
+                                        Every day, I’m blown away by the experiences <br>
+                                        I’ve had and the people I’ve shared them with. <br>
+                                        I truly believe NSH is more than just a student group: <br>
+                                        it’s a launch pad for opportunity, a training ground <br>
+                                        for ideas, and a chance to make your vision a reality.<br>
+                                        </em>
+
+                                     <br> <br>
+
+                                     <em> Liz Huizenga </em>
                                      </blockquote>
                                                                      
                                 </div>     
@@ -352,7 +379,7 @@
                         
                     </div><!-- end .fullwidthbanner -->
                 </div><!-- end .fullwidthbanner-container -->   
-            </div>
+            
 
             <br><br>
              <!--  END  OF NEW SECTION ON CULTURE: REPLACING THE ORIGINAL QUOTE SECTION ///////////////////////////////////////////-->
@@ -739,10 +766,9 @@
                 <div class="row">
                     <div class="span1">
                         
-                        <p class="mute hidden-tablet"><i class="ifc-user_male3 extra-large-icon"></i></p>
-                        
+                        <img src= "_content/about/history.png"  alt="">
                     </div><!-- end. span1 -->
-                    <div class="span8">
+                    <div class="span7">
                         
                         <h3 class="text-uppercase"><strong>The Story</strong></h3>
                         
@@ -773,11 +799,11 @@
 
 
                     <!--////////////////////////// SIDE INFOGRAPHIC: Replace with chart ////////////////////-->
-                    <div class="span3">
+                    <div class="span4">
                         
                         <br><br>
 
-                    <canvas id="revenueChart" height = "200px"></canvas>
+                    <canvas id="revenueChart" height = "300px" width = "400px"></canvas>
 
                         
 
