--- a/Template/explore-html/_layout/js/revolutionslider/css/custom.css
+++ b/Template/explore-html/_layout/js/revolutionslider/css/custom.css
@@ -18,7 +18,7 @@
 	.fullwidthbanner-container {
 		position: relative;
 		width: 100% !important;
-		max-height: 915px !important;
+		max-height: 600px !important;
 		overflow: hidden;
 		padding: 0;
 	}
@@ -28,7 +28,7 @@
 	.fullwidthbanner-container .fullwidthbanner {
 		position: relative;
 		width: 100% !important;
-		max-height: 915px !important;
+		max-height: 600px !important;
 	}
 
 /* ==========================================================================
@@ -51,7 +51,7 @@
 		background: #393939;
 	}
 
-	.tp-bullets.simplebullets.round .bullet.selected { background: #8ec63f;  }
+	.tp-bullets.simplebullets.round .bullet.selected { background: #CE4115;  }
 
 /* ==========================================================================
    =Rev Slider Nav
